# SignalIQ

./: .env  .gitignore  README.md  main.py  pyproject.toml  requierments.txt  test.ipynb
Data/: saudi_companies.csv
Data/cache/: 1010.json  1020.json  1030.json  1050.json  1060.json  1080.json  1111.json  1120.json  1140.json  1150.json  1180.json  1182.json  1183.json  1201.json  1202.json  1210.json  1211.json  1212.json  1213.json  1214.json  1301.json  1302.json  1303.json  1304.json  1320.json  1321.json  1322.json  1323.json  1324.json  1810.json  1820.json  1830.json  1831.json  1832.json  1833.json  1834.json  1835.json  2001.json  2010.json  2020.json  (+230 more)
Data/financials/: 1010_balance.csv  1010_cashflow.csv  1010_income.csv  1020_balance.csv  1020_cashflow.csv  1020_income.csv  1030_balance.csv  1030_cashflow.csv  1030_income.csv  1050_balance.csv  1050_cashflow.csv  1050_income.csv  1060_balance.csv  1060_cashflow.csv  1060_income.csv  1080_balance.csv  1080_cashflow.csv  1080_income.csv  1111_balance.csv  1111_cashflow.csv  1111_income.csv  1120_balance.csv  1120_cashflow.csv  1120_income.csv  1140_balance.csv  1140_cashflow.csv  1140_income.csv  1150_balance.csv  1150_cashflow.csv  1150_income.csv  1180_balance.csv  1180_cashflow.csv  (+724 more)
docs/: 01-project-overview.md  02-system-architecture.md  03-frontend-specification.md  04-ui-guidelines.md  05-api-contract.md  06-ai-features.md  07-folder-structure.md  08-database-overview.md  10-contributing.md  11-design-system.md
frontend/: index.html  package-lock.json  package.json
tests/: test_sentiment.py
(+1723 files in other folders)
