[project]
name = "signaliq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "black>=26.5.1",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "loguru>=0.7.3",
    "lxml>=6.1.1",
    "mypy>=2.3.0",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.21",
    "schedule>=1.2.2",
    "sentencepiece>=0.2.2",
    "sqlalchemy>=2.0.51",
    "ta>=0.11.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
    "yfinance>=1.5.1",
]
